--- a/src/pages/realisations/index.astro
+++ b/src/pages/realisations/index.astro
@@ -106,7 +106,7 @@ function haloVarsFromSlug(
         <div class="real-hero__text">
           <p class="kicker">Portfolio</p>
           <h1 id="realisations-title" class="h2">
-            Réalisations WordPress : sites vitrines & blogs
+            Réalisations WordPress&nbsp;: sites vitrines &amp; blogs
           </h1>
           <p class="section-sub">
             {description}
