--- a/src/pages/parlons-web/index.astro
+++ b/src/pages/parlons-web/index.astro
@@ -75,7 +75,7 @@ try {
           const h = (pick as any)?.height;
 
           return (
-            <li class="card card--punch">
+            <li class="card card--punch" data-reveal="fade-up">
               {src && (
                 <figure class="card__media" aria-hidden="true">
                   <img
